# deepomd

./: .gitignore  CMakeLists.txt  PCFR.sh  PCFRPlus.sh  PSbCFR.sh  PSbCFRPlus.sh  README.md  SbCFR.sh  SbCFRPlus.sh  batch_run.py  copy_results.sh  dream.sh  hyper_tune.py  nfsp.sh  olo_CFR.sh  olo_CFRPlus.sh  olo_CFRPlusLinear.sh  olo_FTRL.sh  olo_FTRLCFR.sh  olo_OMD.sh  olo_OMDCFR.sh  olo_OMDCFRLinear.sh  olo_OMDLinear.sh  ossbcfr.sh  play_match.sh  play_match_leduc.sh  plot_match_result.py  plot_post_evaluate.py  post_evaluate.sh  post_evaluate_HULH.sh  post_evaluate_HULH_ossbcfr.sh  post_match.py  pre_docker.sh  profile.sh  run.sh  run_deepoomd.sh  run_play_HULH.sh  run_play_HULH_ossbcfr.sh  run_play_leduc.sh  run_post_evaluation.py  (+15 more)
deep_cfr/: CMakeLists.txt  deep_cfr.cc  deep_cfr.h  deep_cfr_model.py  deep_escfr_solver.cc  deep_escfr_solver.h  deep_oscfr_solver.cc  deep_rscfr_solver.cc  deep_rscfr_solver.h  deep_sbescfr.cc  deep_sbescfr_solver.cc  deep_sbescfr_solver.h  double_neural_cfr.cc  dream.cc  dream_solver.cc  dream_solver.h  local_best_response.cc  local_best_response.h  mpi_adam.h  mpi_adam_test.cc  multithread_eigen_test.cc  nfsp.cc  nfsp_solver.cc  nfsp_solver.h  online_learning.cc  online_learning_solver.cc  online_learning_solver.h  ossbcfr.cc  ossbcfr_solver.cc  ossbcfr_solver.h  outcome_sampling_mccfr.cc  outcome_sampling_mccfr_test.cc  plot_data.py  plot_data_compare.py  plot_result.py  raw_sbcfr.cc  raw_sbcfr_solver.cc  raw_sbcfr_solver.h  run_deep_cfr.cc  save_results.py  (+13 more)
